ws recognition code

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,7 @@
 {
-  "name": "ws",
-  "compatibility_date": "2026-01-11",
-   "main":"src/index.ts"
+  "name": "ws",        // Worker 的名字（自定义）
+  "compatibility_date": "2026-01-11", // 兼容日期（通常是当前日期）
+  "assets": {
+    "directory": "./dist"            // 指定托管的静态资源目录
+  }
 }
